<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

        <ImageView
            android:id="@+id/food_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/food_image_alt_desc"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/food_image"
            tools:srcCompat="@drawable/food_image" />

        <TextView
            android:id="@+id/image_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/image_credit" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_porsi"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_porsi_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/berapa_porsi"
                android:text="1"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_ubah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/button_ubah" />

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bahan_bahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/bahan_bahan" />

            <TextView
                android:id="@+id/kacang_panjang"
                android:padding="8dp"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kacang_panjang" />

            <TextView
                android:id="@+id/bawang_putih"
                android:padding="8dp"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bawang_putih" />

            <TextView
                android:id="@+id/arak_masak"
                android:padding="8dp"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arak_masak" />

            <TextView
                android:id="@+id/garam_penyedap"
                android:padding="8dp"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/garam_penyedap" />

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/cara_pembuatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/cara_pembuatan" />

            <Button
                android:id="@+id/catat_belanjaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/catat_belanjaan" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
